--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,6 +1,6 @@
 /********** Template CSS **********/
 :root {
-    --primary: #AB7442;
+    --primary: #0088cc;
     --light: #F5F5F5;
     --dark: #353535;
 }
@@ -558,7 +558,26 @@
         padding-left: calc(((100% - 1320px) / 2) + .75rem);
     }
 }
-
+@media (min-width: 1400px){
+    .container, .container-sm, .container-md, .container-lg, .container-xl, .container-xxl {
+        max-width: 1140px !important;
+    }
+}
+@media (min-width: 1200px){
+    .container, .container-sm, .container-md, .container-lg, .container-xl {
+        max-width: 1140px !important;
+    }
+}
+@media (max-width: 991px){
+    .container {
+        max-width: none;
+    }
+}
+@media (min-width: 576px){
+    .d-sm-block {
+        display: block !important;
+    }
+}
 
 /*** Footer ***/
 .footer {
@@ -636,4 +655,95 @@
 
 .porto-separator.tall {
     margin: 22px 0 44px;
+}
+
+
+
+.wpb_wrapper p{
+    line-height: 1.8rem;
+    letter-spacing: -0.05em;
+    color: #777777;
+}
+
+.text-primary{
+    color: #0088cc !important;
+}
+
+.btn.btn-primary{
+    background-color: #0088cc !important;
+    border-color: #0088cc !important;
+}
+
+.wpb_single_image img {
+    height: auto;
+    max-width: 100%;
+    vertical-align: top;
+}
+div.wpb_single_image .vc_single_image-wrapper {
+    display: inline-block;
+    max-width: 100%;
+}
+.wpb_single_image .vc_single_image-wrapper {
+    display: inline-block;
+    vertical-align: top;
+    max-width: 100%;
+}
+
+.wpb_single_image.vc_align_center {
+    text-align: center;
+}
+
+#main.wide .vc_row .vc_row {
+    padding-left: 0;
+    padding-right: 0;
+    margin-left: -15px;
+    margin-right: -15px;
+}
+
+.wpb_button, .wpb_content_element, ul.wpb_thumbnails-fluid>li {
+    margin-bottom: 35px;
+}
+.vc_custom_1564452869743 {
+    padding-top: 80px !important;
+    background-color: #ffffff !important;
+}
+
+.vc_custom_1564451308943 {
+    padding-top: 30px !important;
+    padding-right: 10px !important;
+}
+
+.vc_custom_1564451315932 {
+    padding-top: 30px !important;
+}
+
+.vc_custom_1564451322587 {
+    padding-top: 30px !important;
+    padding-left: 10px !important;
+}
+
+.vc_custom_1564451456580 {
+    margin-top: 10% !important;
+    margin-left: -54% !important;
+}
+
+.vc_custom_1564451464144 {
+    margin-top: -26% !important;
+    margin-left: -33% !important;
+}
+.row-align-items-center .row {
+    -ms-flex-align: center;
+    align-items: center;
+}
+.p-t-xxl {
+    padding-top: 60px !important;
+}
+.position-absolute {
+    position: absolute !important;
+}
+.position-relative {
+    position: relative !important;
+}
+.ft-14{
+    font-size: 14px;
 }
